vfs_fruit: fix base_fsp name conversion

Bug: https://bugzilla.samba.org/show_bug.cgi?id=11039

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Volker Lendecke <vl@samba.org>
(cherry picked from commit d9c22a3af2ac319d075a952c71496b6b76c83fcf)